[tool.poetry]
name = "t_money"
version = "0.1.0"
description = "Advanced Python 3.10 Dataclass for handling monetary values, keeping amount and currency together"
authors = ["Jordan Dimov <jdimov@a115.co.uk>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
